--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   default-workflow:
-    name: Default Workflow
+    name: Default Main Workflow
     instance_type: mac_mini_m1
     max_build_duration: 30
     environment:
